# LocalSFTPServer

./: .gitignore  README.md  pyproject.toml
src/localsftpserver/: __init__.py  sftp_server.py  stub_sftp.py
tests/: test_sftp_server.py
